# Pytorch_Vec256

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  FindAVX.cmake  FindVsx.cmake  FindZVECTOR.cmake  README.md
ATen/: ATen.h  AccumulateType.cpp  AccumulateType.h  NumericUtils.h  Utils.h
ATen/cpu/: FlushDenormal.cpp  vml.h
ATen/cpu/tbb/: CMakeLists.txt
ATen/cpu/tbb/extra/: version_string.ver.in
ATen/cpu/vec/: functional.h  functional_base.h  vec_base.h
ATen/cpu/vec/vec256/: vec256.h  vec256_bfloat16.h  vec256_complex_double.h  vec256_complex_float.h  vec256_double.h  vec256_float.h  vec256_float_neon.h  vec256_int.h  vec256_qint.h
ATen/cpu/vec/vec256/vsx/: vec256_common_vsx.h  vec256_complex_double_vsx.h  vec256_complex_float_vsx.h  vec256_double_vsx.h  vec256_float_vsx.h  vec256_int16_vsx.h  vec256_int32_vsx.h  vec256_int64_vsx.h  vec256_qint32_vsx.h  vec256_qint8_vsx.h  vec256_quint8_vsx.h  vsx_helpers.h
ATen/cpu/vec/vec256/zarch/: vec256_zarch.h
ATen/cpu/vec/vec512/: vec512.h  vec512_bfloat16.h  vec512_complex_double.h  vec512_complex_float.h  vec512_double.h  vec512_float.h  vec512_int.h  vec512_qint.h
ATen/cpu/vec256/: intrinsics.h  vec256.h  vec256_base.h  vec256_bfloat16.h  vec256_complex_double.h  vec256_complex_float.h  vec256_double.h  vec256_float.h  vec256_float_neon.h
ATen/cpu/vec256/vsx/: vec256_common_vsx.h  vec256_complex_double_vsx.h  vec256_complex_float_vsx.h  vec256_double_vsx.h  vec256_float_vsx.h  vec256_int16_vsx.h  vec256_int32_vsx.h  vec256_int64_vsx.h  vec256_qint32_vsx.h  vec256_qint8_vsx.h  vec256_quint8_vsx.h  vsx_helpers.h
ATen/native/: DispatchStub.cpp  DispatchStub.h  Math.h
ATen/native/cpu/: zmath.h
ATen/native/quantized/: affine_quantizer.h  affine_quantizer_base.cpp
ATen/test/: vec256_test_all_types.cpp  vec256_test_all_types.h  vec_m.cpp  vec_test_all_types.cpp  vec_test_all_types.h
c10/: CMakeLists.txt
c10/core/: Allocator.cpp  Allocator.h  Backend.h  CPUAllocator.cpp  CPUAllocator.h  CPUCachingAllocator.cpp  CPUCachingAllocator.h  CopyBytes.cpp  DefaultDtype.cpp  Device.cpp  Device.h  DeviceType.cpp  DeviceType.h  DispatchKey.cpp  DispatchKey.h  DispatchKeySet.cpp  DispatchKeySet.h  GeneratorImpl.cpp  GradMode.cpp  GradMode.h  InferenceMode.cpp  InferenceMode.h  Layout.h  MemoryFormat.h  QEngine.h  Scalar.cpp  Scalar.h  ScalarType.h  ScalarTypeToTypeMeta.h  Storage.cpp  Storage.h  StorageImpl.cpp  StorageImpl.h  Stream.cpp  TensorImpl.cpp  TensorImpl.h  TensorOptions.cpp  TensorOptions.h  UndefinedTensorImpl.cpp  UndefinedTensorImpl.h  (+3 more)
c10/core/impl/: DeviceGuardImplInterface.cpp  DeviceGuardImplInterface.h  FakeGuardImpl.h  InlineStreamGuard.h  LocalDispatchKeySet.cpp  LocalDispatchKeySet.h  README.md  SizesAndStrides.cpp
c10/macros/: Export.h  Macros.h  cmake_macros.h.in
c10/mobile/: CPUCachingAllocator.cpp  CPUCachingAllocator.h  CPUProfilingAllocator.cpp  CPUProfilingAllocator.h
c10/util/: ArrayRef.h  BFloat16-inl.h  BFloat16-math.h  BFloat16.h  Backtrace.cpp  C++17.h  Exception.cpp  Exception.h  ExclusivelyOwned.h  Half-inl.h  Half.h  LeftRight.h  Logging.cpp  Logging.h  MathConstants.cpp  MathConstants.h  MaybeOwned.h  Metaprogramming.h  Optional.cpp  Optional.h  SmallVector.cpp  SmallVector.h  StringUtil.cpp  StringUtil.h  ThreadLocalDebugInfo.cpp  Type.cpp  TypeCast.h  TypeIndex.h  Unicode.cpp  accumulate.h  complex.h  complex_math.cpp  complex_utils.h  either.h  env.h  flags_use_no_gflags.cpp  flat_hash_map.h  hash.h  intrusive_ptr.h  llvmMathExtras.h  (+10 more)
